# Lasper

./: CAVEATS.md  Cargo.toml  FAQ.md  README.md
src/: app.rs  events.rs  main.rs
src/app/: actions.rs  handlers.rs  mod.rs
src/nspawn/: config.rs  create.rs  errors.rs  handlers.rs  machinectl.rs  manager.rs  mod.rs  models.rs  network.rs  nvidia.rs  storage.rs  utils.rs
src/nspawn/adapters/: mod.rs
src/nspawn/adapters/comm/: cli.rs  dbus.rs  formatting.rs  mod.rs  pty.rs
src/nspawn/adapters/config/: builder.rs  mod.rs  nspawn_file.rs  (+1 more)
src/nspawn/config/: mod.rs  nspawn_file.rs  systemd_unit.rs
src/nspawn/core/: handlers.rs  manager.rs  mod.rs
src/nspawn/deploy/: bootstrap.rs  clone.rs  image.rs  mod.rs
src/nspawn/hw/: gpu.rs  metrics.rs  mod.rs  network.rs  nvidia.rs
src/nspawn/models/: config.rs  state.rs
src/nspawn/ops/: handlers.rs  manager.rs  mod.rs
src/nspawn/platform/: capabilities.rs  gpu.rs  mod.rs  network.rs
src/nspawn/provider/: cli.rs  dbus.rs
src/nspawn/rootfs/: mod.rs  network.rs  users.rs  wayland.rs
src/nspawn/storage/: detect.rs  mod.rs
src/nspawn/sys/: command.rs  fs_type.rs  io.rs  mod.rs
src/nspawn/utils/: command.rs  discovery.rs  formatting.rs  fs_type.rs  io.rs  mod.rs  storage.rs
src/ui/: container_list.rs  create_wizard.rs  detail_panel.rs  layout.rs  mod.rs
src/ui/core/: legacy.rs  mod.rs
src/ui/views/: container_list.rs  detail_panel.rs  mod.rs
src/ui/widgets/: checkbox.rs  confirmation.rs  input.rs  list.rs  mod.rs  power_menu.rs
src/ui/wizard/: builder.rs  context.rs  manager.rs  mod.rs  traits.rs
(+108 files in other folders)
