[package]
name = "lasper"
version = "0.1.20"
edition = "2021"
description = "A LazyDocker-inspired TUI for managing systemd-nspawn containers"

[[bin]]
name = "lasper"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
dirs = "5"
libc = "0.2"
uzers = "0.12"
pciid-parser = "0.8"
async-trait = "0.1"
thiserror = "1"
zbus = "4.4"
futures-util = "0.3"
rust-ini = "0.21.3"
which = "7.0"
serde_json = "1.0.149"
tui-input = "0.11.0"
notify = "8.2.0"
uuid = { version = "1.23.0", features = ["v4"] }
url = "2.5"
fs2 = "0.4"
tempfile = "3"

